2023-02-13  Russell Almond  <ralmond@cherry>

	* R/PnetNetica.R (MakePnode.NeticaNode): Added trimws to node labels as that presents and issue for Netica.
	

2022-11-09  Russell Almond  <ralmond@pei>

	* R/BNNetica.R: (PnetSerialize) -- Added remove.file if necessary to catch growing file sizes.

2022-09-29  Russell Almond  <ralmond@cherry.local>

	* R/Warehouse.R (BNWarehouse$WarhouseCopy): There was a problem
	where the truename was not being updated on copy.  Should now be
	fixed, but needs a test.

2022-04-10  Russell Almond  <ralmond@cherry.local>

	* R/PnetNetica.R (maxCPTParam): set it up so that it should fall
	back to GetPriorWeight() if NodeExperience() returns NA.  This
	allows the function to be used to set parameters to match an
	existing CPT.

2021-06-01  Russell Almond  <ralmond@cherry>

	* R/Warehouse.R (BNWarehouse): Changed WarehouseSave method to
	look at PnetPathname property of network rather than the one in
	the manifest.
	(BNWarehouse): Split the WarehouseSupply method for BNWarehouse
	and NNWarehouse as the branch for what to do if the cached value
	is not valid is different.

2021-05-29  Russell Almond  <ralmond@cherry>

	* R/PnetNetica.R (MakePnet.NeticaBN): Fixed bug with null pathname.
	

2020-08-09  Russell Almond  <ralmond@Cherry>

	* R/BNNetica.R (PnodeEvidence<-): Added a logical method as that
	seems to fall through the cracks.

2020-08-08  Russell Almond  <ralmond@Cherry>

	* R/Statistics.R: Added Chararcter methods to statistic
	operators. 

2020-04-01  Russell Almond  <ralmond@Cherry>

	* R/BNNetica.R: Added warning when replacing network.

2020-03-14  Russell Almond  <ralmond@Cherry>

	* R/Warehouse.R (WarehouseFree(BNWarehouse)): Added list argument
	to rm.

2020-03-08  Russell Almond  <ralmond@Cherry>

	* R/Warehouse.R
	(WarehouseCopy,is.legal.name,as.legal.name,is.valid): Added.

2020-02-12  Rusell Almond  <ralmond@Cherry>

	* R/Warehouse.R: WarehouseFree now actually deletes the network.